--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,5 +3,7 @@
         <button class="btn btn-primary">Create room</button>
     </a>
     <hr>
-    <button class="btn btn-primary">Join room</button>
+    <a href="./joinRoom">
+        <button class="btn btn-primary">Join room</button>
+    </a >
 </div>
